# memory_project

./: CHANGELOG.md  IMPROVEMENT_PLAN.md  README.md  ROADMAP.md  main.py  pyproject.toml
.github/workflows/: tests.yml
loci/: __init__.py  buffer.py  colors.py  config.py  engine.py  models.py  prompt_builder.py  summarizer.py
loci/cli/: commands.py  main.py
loci/graph/: extractor.py  index.py  renderer.py  resolver.py
loci/llm/: client.py  tokens.py
loci/rag/: chunker.py  retriever.py  vector.py
loci/storage/: base.py  filesystem.py
tests/: conftest.py
tests/smoke/: test_engine_chat.py  test_kg_extract.py  test_rag_index.py  test_storage_read_write.py  test_storage_snapshot.py
tests/unit/: test_buffer.py  test_chunker.py  test_graph_index.py  test_models.py  test_rag_threshold.py  test_summarizer.py  test_tokens.py
